--- a/.github/workflows/triggerargocd.yml
+++ b/.github/workflows/triggerargocd.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           valueFile: 'kube/deployment.yaml'
           propertyPath: 'spec.template.spec.containers[0].image'
-          value: 797215417207.dkr.ecr.ap-south-1.amazonaws.com/${{ github.event.client_payload.image }}
+          value: 506952574321.dkr.ecr.ap-southeast-1.amazonaws.com/${{ github.event.client_payload.image }}
           branch: main
           message: "Update Image Version to ${{ github.event.client_payload.image }}"
